--- a/templates/flask_user_layout.html
+++ b/templates/flask_user_layout.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>{{ user_manager.USER_APP_NAME }}</title>
-
-    <!-- Bootstrap -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- In-lining styles to avoid needing a separate .css file -->
     <style>
@@ -32,7 +30,7 @@
 <body>
     {% block body %}
     <div id="header-div" class="clearfix with-margins">
-        <div class="pull-left"><a href="/"><h1 class="no-margins">{{ user_manager.USER_APP_NAME }}</h1></a></div>
+        {# <div class="pull-left"><a href="/"><h1 class="no-margins">{{ user_manager.USER_APP_NAME }}</h1></a></div>
         <div class="pull-right">
             {% if call_or_get(current_user.is_authenticated) %}
                 <a href="{{ url_for('user.edit_user_profile') }}">{{ current_user.username or current_user.email }}</a>
@@ -41,15 +39,18 @@
             {% else %}
                 <a href="{{ url_for('user.login') }}">{%trans%}Sign in{%endtrans%}</a>
             {% endif %}
-        </div>
+        </div> #}
     </div>
     {% block menu %}
+    {# 
     <div id="menu-div" class="with-margins">
         <a href="/">{%trans%}Home page{%endtrans%}</a>
     </div>
+    #}
     {% endblock %}
+    {# 
     <hr class="no-margins"/>
-
+	#}
     <div id="main-div" class="with-margins">
     {# One-time system messages called Flash messages #}
     {% block flash_messages %}
@@ -69,21 +70,21 @@
         {% block content %}{% endblock %}
     {% endblock %}
     </div>
-
-    <br/>
+    {# 
     <hr class="no-margins"/>
     <div id="footer-div" class="clearfix with-margins">
         <div class="pull-left">{{ user_manager.USER_APP_NAME }} v1.0</div>
         <div class="pull-right">&copy; 2014 MyCorp</div>
     </div>
+    #}
     {% endblock %}
 
-
+    {#
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <!-- Bootstrap -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
+    #}
     {# *** Allow sub-templates to insert extra html to the bottom of the body *** #}
     {% block extra_js %}{% endblock %}
 
