--- a/templates/test.html
+++ b/templates/test.html
@@ -18,7 +18,27 @@
 }
 
 </style>
-<div class="container my-5">
+
+{% block flash_messages %}
+    {%- with messages = get_flashed_messages(with_categories=true) -%}
+        {% if messages %}
+            {% for category, message in messages %}
+                {% if category=='error' %}
+                    {% set category='danger' %}
+                {% endif %}
+                <div class="alert alert-{{category}}">{{ message|safe }}</div>
+            {% endfor %}
+        {% endif %}
+    {%- endwith %}
+{% endblock %}
+
+<div class="container-fluid">
+<div class="row m-2">
+<a style="margin-left:auto;" class="float-right d-block" href="{{ url_for('user.logout') }}">{%trans%}Sign out{%endtrans%}</a>
+</div>
+</div>
+<div class="container">
+
 <form id="form" action="/submit_task" method="post"  class="needs-validation" novalidate>
   <div class="form-group row">
     <label for="files" class="col-sm-2 col-form-label" >File</label>
