--- a/templates/admin-base.html
+++ b/templates/admin-base.html
@@ -10,13 +10,13 @@
     <ul class="navbar-nav mr-auto">
 	{% for view in admin_views %}
     <li class="nav-item">
-        <a class="nav-link" href="{{ url_for(view.view_name,method='edit')}}">{{view.name}}</a>
+        <a class="nav-link" href="{{ url_for('admin.'+view.view_name,method='edit')}}">{{view.name}}</a>
     </li>
     {% endfor %}
      </ul>
     <ul class="navbar-nav ml-auto">
     <li class="nav-item float-right">
-        <a class="nav-link" href="{{ url_for('logout')}}">Logout</a>
+        <a class="nav-link" href="{{ url_for('login.logout')}}">Logout</a>
     </li>
     </ul>
 {% endif %}
