--- a/templates/asset-edit.html
+++ b/templates/asset-edit.html
@@ -7,10 +7,10 @@
       <div class="col-sm-3">
         <div class = "d-flex justify-content-end" >
         <div class="d-flex flex-row my-2">
-          <form class="form-inline d-flex" method="get" action="{{ url_for(view_func,method='new') }}">
+          <form class="form-inline d-flex" method="get" action="{{ url_for('admin.'+view_func,method='new') }}">
             <button class="btn btn-success ml-2" type="submit" value =""><i class="material-icons">add</i></button>
           </form>
-          <form class="form-inline d-flex" method="post" action="{{ url_for(view_func,method='delete',identifier=asset.get_id()) }}">
+          <form class="form-inline d-flex" method="post" action="{{ url_for('admin.'+view_func,method='delete',identifier=asset.get_id()) }}">
             <button class="btn btn-danger ml-2" type="submit" value =""><i class="material-icons">delete_forever</i></button>
           </form>
           </div>
@@ -22,7 +22,7 @@
         </div>
         <div class="d-flex flex-column list-group">
           {% for an_asset in assets %}
-            <a href="{{ url_for(view_func,identifier=an_asset.get_id(),method='edit')}}" class="list-group-item list-group-item-action {{ 'active' if asset.name == an_asset.name }} ">{{an_asset.name or an_asset.username}}</a>
+            <a href="{{ url_for('admin.'+view_func,identifier=an_asset.get_id(),method='edit')}}" class="list-group-item list-group-item-action {{ 'active' if asset.name == an_asset.name }} ">{{an_asset.name or an_asset.username}}</a>
           {% endfor %}
         </div>
         </div>  
