--- a/templates/asset-edit.html
+++ b/templates/asset-edit.html
@@ -8,10 +8,10 @@
         <div class = "d-flex justify-content-end" >
         <div class="d-flex flex-row my-2">
           <form class="form-inline d-flex" method="get" action="{{ url_for('admin.'+view_func,method='new') }}">
-            <button class="btn btn-success ml-2" type="submit" value =""><i class="material-icons">add</i></button>
+            <button class="btn btn-success ml-2" type="submit" value =""><i class="fas fa-plus"></i></button>
           </form>
           <form class="form-inline d-flex" method="post" action="{{ url_for('admin.'+view_func,method='delete',identifier=asset.get_id()) }}">
-            <button class="btn btn-danger ml-2" type="submit" value =""><i class="material-icons">delete_forever</i></button>
+            <button class="btn btn-danger ml-2" type="submit" value =""><i class="fas fa-trash-alt"></i></button>
           </form>
           </div>
         </div>
@@ -20,7 +20,7 @@
             <input class="form-control" id="search"></input>
             </form>
         </div>
-        <div class="d-flex flex-column list-group">
+        <div class="d-flex flex-column list-group mt-3">
           {% for an_asset in assets %}
             <a href="{{ url_for('admin.'+view_func,identifier=an_asset.get_id(),method='edit')}}" class="list-group-item list-group-item-action {{ 'active' if asset.get_id() == an_asset.get_id() }} ">{{an_asset.name or an_asset.username}}</a>
           {% endfor %}
