--- a/templates/submit.html
+++ b/templates/submit.html
@@ -19,26 +19,35 @@
 #progress-outer.expanded {
 	height: 40px;
 }
+.custom-file-input:disabled {
+	opacity: 0 !important;
+}
 </style>
 
  <form id="form" action="/submit_task" method="post"  class="needs-validation" novalidate>
   <div class="form-group row">
-    <label for="files" class="col-sm-2 col-form-label" >File</label>
-        <div class="col-sm-10">
-    		<input type="file" class="form-control " id="files" name="file" accept=".dat" required/>
+    <div class="col-sm-12">
+    	<div class= "custom-file">
+			<input type="file" class="form-control custom-file-input" id="files" name="file" accept=".dat" required/>
+		    <label for="files" class="custom-file-label" >Choose Twix File...</label>
 		    <div class="invalid-feedback">
 			    A file is required.
 		    </div>
-    	</div>
-  </div>
-  <div class="form-group row" id="extra_files_entry">
-    <label for="files" class="col-sm-2 col-form-label" >Additional files</label>
-        <div class="col-sm-10">
-    		<input type="file" class="form-control " id="extra_files" name="extra_files" multiple disabled/>
-    	</div>
+		</div>
+	</div>
   </div>
 
-<div class="card my-2">
+  <div class="form-group row" id="extra_files_entry">
+    <div class="col-sm-12">
+    	<div class= "custom-file">
+			<input type="file" class="form-control custom-file-input" id="extra_files" name="extra_files" multiple disabled/>
+		    <label for="extra_files" class="custom-file-label" >Additional files</label>
+		</div>
+	</div>
+  </div>
+
+
+<div class="card my-4">
   <div class="card-header">
     Scan Information
   </div>
