--- a/files/yarra.css
+++ b/files/yarra.css
@@ -636,3 +636,15 @@ body > footer > div > div.row.justify-content-center.mt-0 > a:hover
 #roles {
   list-style-type: none;
 }
+
+.custom-file-input:disabled {
+  opacity: 0;
+}
+.progress .progress-bar {
+  font-size: 1em;
+    line-height: 1em;
+}
+
+.custom-file-input:disabled + .custom-file-label::after {
+  opacity: 0.65;
+}
