--- a/templates/asset-edit.html
+++ b/templates/asset-edit.html
@@ -16,7 +16,7 @@
           </div>
         </div>
         <div class="d-flex flex-row my-2">
-          <form class="form-inline">
+          <form class="form" style="width:100%">
             <input class="form-control" id="search"></input>
             </form>
         </div>
