--- a/templates/submit.html
+++ b/templates/submit.html
@@ -35,11 +35,20 @@
 </style>
 
  <form id="form" action="/submit_task" method="post"  class="needs-validation" novalidate>
+
+<nav>
+  <div class="nav nav-tabs" id="nav-tab" role="tablist" >
+    <a style="color:grey;" class="nav-item nav-link active" id="nav-upload-tab" data-toggle="tab" href="" role="tab" aria-controls="nav-upload" aria-selected="true">Upload</a>
+    <a style="color:grey;" class="nav-item nav-link " id="nav-archive-tab" data-toggle="tab" href="" role="tab" aria-controls="nav-archive" aria-selected="false">Archive</a>
+  </div>
+</nav>
+<div class="tab-content" id="nav-tabContent">
+  <div class="tab-pane fade show active" id="nav-upload" role="tabpanel" aria-labelledby="nav-home-tab">
   <div class="form-group row">
     <div class="col-sm-12">
     	<div class= "custom-file">
 			<input type="file" class="form-control custom-file-input" id="files" name="file" accept=".dat" required/>
-		    <label for="files" class="custom-file-label" >Choose Twix File...</label>
+		    <label for="files" class="custom-file-label" default="Choose Twix File..." >Choose Twix File...</label>
 		    <div class="invalid-feedback">
 			    A file is required.
 		    </div>
@@ -55,8 +64,23 @@
 		</div>
 	</div>
   </div>
+  </div>
+  <div class="tab-pane fade" id="nav-archive" role="tabpanel" aria-labelledby="nav-profile-tab">
+  	<div class="row">
+	  <div class="col-sm-11 form-group">
+    	  <input type="text" name="search_box" class="form-control" id="search_box" placeholder="search" required>
+    	</div>
+	  <div class="col-sm-1">
+	    <button class="btn btn-primary float-right" type="submit" id="search_btn">Search</button>
+	</div>
+	</div>
+  <div id="search_results_box" class="card my-4 d-none">
+	<table class="table" id='search_results'></table>
+  </div>
 
-
+  </div>
+  
+</div>
 <div class="card my-4">
   <div class="card-header">
     Scan Information
@@ -83,7 +107,11 @@
     <input type="text" name="taskid" class="form-control" id="taskId" placeholder="Task ID" required>
 	</div>
   </div>
-  <input name='protocol'  type="hidden" class="form-control" id="protocol" value="Unknown">
+  <div class="form-group row">
+    <label for="protocol" class="col-sm-2 col-form-label">Protocol</label>
+    <div class="col-sm-10">
+  <input name='protocol'  class="form-control" id="protocol" value="Unknown" readonly="">
+</div></div>
 
 </div>
 </div>
@@ -146,21 +174,18 @@
 	    <label for="processing" class="col-sm-2 col-form-label">Processing</label>
 	    <div class="col-sm-10">
 
-		<div class="form-check form-check-inline mt-2">
-		  <input class="form-check-input" type="radio" name="processing" id="processing1" value="default" checked>
-		  <label class="form-check-label" for="processing1">Default</label>
+		<div class="custom-control custom-radio custom-control-inline mt-2">
+		  <input class="custom-control-input" type="radio" name="processing" id="processing1" value="default" checked>
+		  <label class="custom-control-label" for="processing1">Default</label>
 		</div>
-		<div class="form-check form-check-inline">
-		  <input class="form-check-input" type="radio" name="processing" id="processing2" value="night">
-		  <label class="form-check-label" for="processing2">Night</label>
+		<div class="custom-control custom-radio custom-control-inline">
+		  <input class="custom-control-input" type="radio" name="processing" id="processing2" value="night">
+		  <label class="custom-control-label" for="processing2">Night</label>
 		</div>
-		<div class="form-check form-check-inline">
-		  <input class="form-check-input" type="radio" name="processing" id="processing3" value="priority">
-		  <label class="form-check-label" for="processing3">Priority</label>
+		<div class="custom-control custom-radio custom-control-inline">
+		  <input class="custom-control-input" type="radio" name="processing" id="processing3" value="priority">
+		  <label class="custom-control-label" for="processing3">Priority</label>
 		</div>
-
-
-
 {#	    <select name='processing'  class="form-control" id="processing">
 	    	<option>Default</option>
 	    	<option>Night</option>
