--- a/files/yarra.css
+++ b/files/yarra.css
@@ -182,8 +182,8 @@ body {
   margin-bottom: 30px;
 }
 
-.nav-item {
-  color: #fff;     
+.nav-item {  
+  color: #580F8B !important;   
   padding-left:  0px;  
   padding-right: 0px; 
   padding-top: 0px;
@@ -197,7 +197,7 @@ body {
   padding-bottom: 15px;
 }
 
-.nav-link:hover
+.modes > .nav-link:hover
 {
 }
 
@@ -211,7 +211,8 @@ body {
 }
 
 .nav-item.active {
-  background-color: #121212 !important;   
+  color: #373a3c !important;         
+  font-weight: 500;
 }
 
 .nav-item.navmen:hover, .nav-item.navmen.active:hover,
@@ -635,4 +636,53 @@ body > footer > div > div.row.justify-content-center.mt-0 > a:hover
 
 #roles {
   list-style-type: none;
+}
+
+#progress-outer {
+	height: 0px;
+	transition: height 0.4s linear;
+}
+#progress-outer.expanded {
+	height: 40px;
+}
+
+.custom-file-input:disabled {
+	opacity: 0;
+}
+.progress .progress-bar {
+	font-size: 1em;
+    line-height: 1em;
+}
+
+.custom-file-input:disabled + .custom-file-label::after {
+  opacity: 0.65;
+}
+
+.custom-radio .custom-control-input:checked ~ .custom-control-label::before {
+  background-color: #490C73 !important;
+}
+
+.custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
+  background-color: rgba(73, 12, 115, 0.5) !important;
+}
+
+.custom-control-input:focus ~ .custom-control-label::before {
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(73, 12, 115, 0.5);
+          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(73, 12, 115, 0.5);
+}
+
+.custom-control-input:active ~ .custom-control-label::before {
+  color: #fff;
+  background-color: #490C73 !important;
+}
+.custom-control-input:checked~.custom-control-label::before {
+  border-color: #490C73 !important;
+}
+
+.custom-control-input:disabled ~ .custom-control-label {
+  color: #868e96;
+}
+
+.custom-control-input:disabled ~ .custom-control-label::before {
+  background-color: #e9ecef  !important;
 }
