background task submission, archive submission

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,19 @@
         YarraWebClient
         </a>
         {% block header %}
+{% if current_user.is_admin %}
+  <ul class="navbar-nav float-right">
+  <li class="nav-item float-right">
+  <a class="nav-link" href="{{ url_for('admin.user_edit',method='edit')}}"><i class="fas fa-cogs"></i> Admin</a>
+  </li>
+</ul>
+{% endif %}
+  <ul class="navbar-nav float-right">
+  <li class="nav-item float-right">
+  <a class="nav-link" href="{{ url_for('tasks')}}"><i class="fas fa-tasks"></i> Tasks</a>
+  </li>
+</ul>
+
         {% endblock %}
         {% if current_user.is_authenticated %}
         <ul class="navbar-nav ml-auto">
