--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -12,33 +12,58 @@
   </div>
 {% endmacro %}
 
+{% macro row_call(key) %}
+  <div class="form-group row">
+	    <div class="col-sm-4">
+  	    	<strong>{{key}}</strong>
+  	    </div>
+  	    <div class="col-sm-8">
+  	      	{{ caller() }}
+  	     </div>
+  </div>
+{% endmacro %}
+
 {% block content %}
   {{ flashes() }}
 <ul>
-{% for t in tasks %}
+
+<nav class="mb-4">
+  <div class="nav nav-tabs modes" id="nav-tab" role="tablist" >
+    <a class="nav-item nav-link {{status|active_eq('pending')}}" id="nav-upload-tab" data-toggle="tab" href="{{url_for('tasks',status='pending')}}" role="tab" aria-controls="nav-upload" aria-selected="true"><i class="fas fa-sync"></i> In Progress</a>
+    <a class="nav-item nav-link  {{status|active_eq('submitted')}}" id="nav-archive-tab" data-toggle="tab" href="{{url_for('tasks',status='submitted')}}" role="tab" aria-controls="nav-archive" aria-selected="false"><i class="fas fa-check"></i> Submitted</a>
+    <a class="nav-item nav-link  {{status|active_eq('failed')}}" id="nav-archive-tab" data-toggle="tab" href="{{url_for('tasks',status='failed')}}" role="tab" aria-controls="nav-archive" aria-selected="false"><i class="fas fa-times"></i> Failed</a>
+  </div>
+</nav>
+
+{% for t in tasks|sort(attribute='created_date', reverse=True) %}
 <div class="card my-4">
   <div class="card-header">
 	{{t.name}}
-</div>
+  </div>
   <div class="card-body" >
-  <div class="form-group row">
-<div class="col-lg-6">
-  {{row('Status', t.submission_status)}}
-  {{row('Server', t.mode.server.name)}}
-  {{row('Priority', t.priority)}}
-  {{row('Protocol', t.protocol)}}
-  {{row('Mode', t.mode.name)}}
-</div>
+	<div class="row">
+	<div class="col-lg-6">
+	  {{row('Status', t.submission_status)}}
+	  {% call row_call('Server') %}
+	     <a href="http://{{t.mode.server.path}}:8080" target="_blank">{{t.mode.server.name}}</a>
+	  {% endcall %}
+	  {{row('Priority', t.priority)}}
+	  {{row('Protocol', t.protocol)}}
+	  {{row('Submitted', t.created_date|dt)}}
+	  {{row('Mode', t.mode.name)}}
+	</div>
 
-<div class="col-lg-6">
-  {{row('Accession', t.accession or 'None')}}
-  {%if t.mode.param_label %}
-	{{row(t.mode.param_label, t.param_value)}}
-  {%endif %}
+	<div class="col-lg-6">
+	  {{row('Accession', t.accession or 'None')}}
+	  {%if t.mode.param_label %}
+		{{row(t.mode.param_label, t.param_value)}}
+	  {%endif %}
+	</div>
 </div>
 </div>
 </div>
-</div>
+{% else %}
+No {{status}} tasks currently.
 {% endfor %}
 </ul>
 {% endblock %}
