--- a/webclient/templates/submit.html
+++ b/webclient/templates/submit.html
@@ -5,7 +5,9 @@
 <nav class="mb-4">
   <div class="nav nav-tabs modes" id="nav-tab" role="tablist" >
     <a class="nav-item nav-link active" id="nav-upload-tab" data-toggle="tab" href="" role="tab" aria-controls="nav-upload" aria-selected="true"><i class="fas fa-upload"></i> Upload File</a>
+{% if config.YARRA_ARCHIVE_UPLOAD %}
     <a class="nav-item nav-link " id="nav-archive-tab" data-toggle="tab" href="" role="tab" aria-controls="nav-archive" aria-selected="false"><i class="fas fa-search"></i> Search Archive</a>
+{% endif %}
   </div>
 </nav>
 <div class="tab-content" id="nav-tabContent">
@@ -31,6 +33,7 @@
 	</div>
   </div>
   </div>
+{% if config.YARRA_ARCHIVE_UPLOAD %}
   <div class="tab-pane fade" id="nav-archive" role="tabpanel" aria-labelledby="nav-profile-tab">
   	<div class="row">
 	  <div class="col-sm-11 form-group">
@@ -45,7 +48,7 @@
   </div>
 
   </div>
-  
+{% endif %}  
 </div>
 <div class="card my-4">
   <div class="card-header">
