fix registration flow, provide link to password change flow

--- a/webclient/templates/users/login.html
+++ b/webclient/templates/users/login.html
@@ -4,4 +4,5 @@
 {% block content %}
   {{ flashes() }}
   {{ render_form(form) }}  
+No account? <a href="{{url_for('login.register')}}">Register here</a>
 {% endblock %}
