--- a/webclient/templates/base.html
+++ b/webclient/templates/base.html
@@ -38,27 +38,7 @@
         {% endif %}
 
         {% endblock %}
-<!--        
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item float-right">
-          <a class="nav-link" href="{{ url_for('login.logout')}}"><i class="fas fa-sign-out-alt"></i> Logout</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      </ul>
 
- -->      
    {% if current_user.is_authenticated %}
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown">
@@ -66,7 +46,7 @@
           <i class="fas fa-user"></i> {{current_user.id}}
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="{{ url_for('login.password_change')}}"><i class="fas fa-key"></i> Update Password</a>
+          <a class="dropdown-item" href="{{ url_for('login.password_change')}}"> <i class="fas fa-user"></i> Account settings</a>
           <a class="dropdown-item" href="{{ url_for('login.logout')}}"><i class="fas fa-sign-out-alt"></i> Logout</a>
         </div>
       </li>
@@ -83,11 +63,10 @@
       {% block content %}{% endblock %}
       </div>
     </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>    
 
-{#   #}
     <footer class="footer mt-auto py-3">
       <div class="container mt-3 mb-4">
         <div class="row justify-content-center">        
