basic search pagination in progress

--- a/webclient/templates/submit.html
+++ b/webclient/templates/submit.html
@@ -41,10 +41,14 @@
     	</div>
 	  <div class="col-sm-1">
 	    <button class="btn btn-primary float-right" type="submit" id="search_btn" style="height: 37px;">Search</button>
-	</div>
+	  </div>
 	</div>
   <div id="search_results_box" class="card my-4 d-none">
 	<table class="table" id='search_results'></table>
+	<div class="col-sm-11"></div>
+	<div class="col-sm-1">
+    <button class="btn btn-primary float-right" type="submit" id="search_next_btn" style="height: 37px;">Next</button>
+	</div>
   </div>
 
   </div>
