--- a/webclient/templates/submit.html
+++ b/webclient/templates/submit.html
@@ -42,15 +42,22 @@
 	  <div class="col-sm-1">
 	    <button class="btn btn-primary float-right" type="submit" id="search_btn" style="height: 37px;">Search</button>
 	  </div>
-	</div>
-  <div id="search_results_box" class="card my-4 d-none">
+  </div>
+  <div id="search_results_box" class="card my-3 d-none p-4">
+  	<div class="" style="max-height:300px; overflow-y: auto;">
 	<table class="table" id='search_results'></table>
-	<div class="col-sm-11"></div>
-	<div class="col-sm-1">
-    <button class="btn btn-primary float-right" type="submit" id="search_next_btn" style="height: 37px;">Next</button>
+	</div>
+	<div class="row mt-3">
+		<div class="col-sm-10"></div>
+		<div class="col-sm-1">
+	    <button class="btn btn-primary" type="submit" id="search_prev_btn" style="height: 37px;">Prev</button>
+		</div>
+
+		<div class="col-sm-1">
+	    <button class="btn btn-primary" type="submit" id="search_next_btn" style="height: 37px;">Next</button>
+		</div>
 	</div>
   </div>
-
   </div>
 {% endif %}  
 </div>
