--- a/webclient/templates/submit.html
+++ b/webclient/templates/submit.html
@@ -76,7 +76,7 @@
 	</div>
   </div>
   <div class="form-group row">
-    <label for="accession" class="col-sm-2 col-form-label">Accession number</label>
+    <label for="accession" class="col-sm-2 col-form-label" id="accession-label">Accession number</label>
     <div class="col-sm-10">
     <input type="text" name="accession" class="form-control" id="accession" placeholder="Accession">
 	</div>
@@ -130,7 +130,7 @@
 		  <div class="form-group row mode_param_entry d-none" id="mode_{{server.name}}_{{mode.name}}_param">
 		    <label for="param" class="col-sm-2 col-form-label"><strong>{{mode.param_label}}</strong></label>
 		    <div class="col-sm-10">
-		    <input name='param'  type="number" min="{{mode.param_min}}" max="{{mode.param_max}}" class="form-control" placeholder="">
+		    <input name='param' value="{{mode.param_default}}" type="number" min="{{mode.param_min}}" max="{{mode.param_max}}" class="form-control" placeholder="">
     	    <div class="invalid-feedback">
 			    Must be an integer between {{mode.param_min}} and {{mode.param_max}} inclusive
     		</div>
