--- a/webclient/templates/asset-edit.html
+++ b/webclient/templates/asset-edit.html
@@ -1,5 +1,5 @@
 {%extends "admin-base.html" %}
-{% block title %} {{ asset.name if asset else "Unknown" }} {% endblock %}
+{% block title %} &middot; Edit {{ view_name }} {% endblock %}
 
 {% block content %}
     {{ flashes() }}
