--- a/webclient/templates/admin-base.html
+++ b/webclient/templates/admin-base.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 
-
 {% block header %}
 {% if current_user.is_authenticated %}
     <ul class="navbar-nav mr-auto">
 	{% for view in admin_views %}
-    <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('admin.'+view.view_name,method='edit')}}">{{view.name}}</a>
+    <li class="nav-item {% if view_func==view.view_name %}active{% endif %}">
+        <a class="nav-link" href="{{ url_for('admin.'+view.view_name,method='edit')}}">{{view.title|safe}}</a>
     </li>
     {% endfor %}
+    <li class="nav-item">
+        <a class="nav-link" href="/"><i class="fas fa-reply"></i> Back</a>
+    </li>
      </ul>
 {% endif %}
 {% endblock %}
