--- a/webclient/templates/submit.html
+++ b/webclient/templates/submit.html
@@ -50,11 +50,11 @@
 	<div class="row mt-3">
 		<div class="col-sm-10"></div>
 		<div class="col-sm-1">
-	    <button class="btn btn-primary" type="submit" id="search_prev_btn" style="height: 37px;">Prev</button>
+	    <button class="btn btn-primary" type="submit" id="search_prev_btn" style="height: 37px;"><i class="fas fa-angle-left"></i> Prev</button>
 		</div>
 
 		<div class="col-sm-1">
-	    <button class="btn btn-primary" type="submit" id="search_next_btn" style="height: 37px;">Next</button>
+	    <button class="btn btn-primary" type="submit" id="search_next_btn" style="height: 37px;">Next <i class="fas fa-angle-right"></i></button>
 		</div>
 	</div>
   </div>
