--- a/webclient/templates/users/login.html
+++ b/webclient/templates/users/login.html
@@ -1,5 +1,5 @@
 {%extends "base.html" %}
-{% block title %} Login {% endblock %}
+{% block title %}  &middot; Login {% endblock %}
 
 {% block content %}
   {{ flashes() }}
