--- a/webclient/templates/users/password_change.html
+++ b/webclient/templates/users/password_change.html
@@ -1,5 +1,5 @@
 {%extends "base.html" %}
-{% block title %} Password Change {% endblock %}
+{% block title %} &middot; Settings {% endblock %}
 
 {% block content %}
   {{ flashes() }}
