--- a/webclient/templates/users/register.html
+++ b/webclient/templates/users/register.html
@@ -1,5 +1,5 @@
 {%extends "base.html" %}
-{% block title %} Register {% endblock %}
+{% block title %}  &middot; Register {% endblock %}
 
 {% block content %}
   {{ flashes() }}
