--- a/webclient/templates/admin-base.html
+++ b/webclient/templates/admin-base.html
@@ -4,8 +4,8 @@
 {% if current_user.is_authenticated %}
     <ul class="navbar-nav mr-auto">
 	{% for view in admin_views %}
-    <li class="nav-item {% if view_func==view.view_name %}active{% endif %}">
-        <a class="nav-link" href="{{ url_for('admin.'+view.view_name,method='edit')}}">{{view.title|safe}}</a>
+    <li class="nav-item {% if view_name==view.view_name %}active{% endif %}">
+        <a class="nav-link" href="{{ url_for(view.view_name,method='edit')}}"><i class="fas fa-{{view.icon}}"></i> {{view.title}}</a>
     </li>
     {% endfor %}
     <li class="nav-item">
