--- a/webclient/templates/asset-edit.html
+++ b/webclient/templates/asset-edit.html
@@ -1,5 +1,5 @@
 {%extends "admin-base.html" %}
-{% block title %} &middot; Edit {{ view_name }} {% endblock %}
+{% block title %} &middot; Edit {{ view_title }} {% endblock %}
 
 {% block content %}
     {{ flashes() }}
@@ -7,10 +7,10 @@
       <div class="col-sm-3">
         <div class = "d-flex justify-content-end" >
         <div class="d-flex flex-row my-2">
-          <form class="form-inline d-flex" method="get" action="{{ url_for('admin.'+view_func,method='new') }}">
+          <form class="form-inline d-flex" method="get" action="{{ url_for(view_name,method='new') }}">
             <button class="btn btn-success ml-2" type="submit" value =""><i class="fas fa-plus"></i></button>
           </form>
-          <form class="form-inline d-flex" method="post" action="{{ url_for('admin.'+view_func,method='delete',identifier=asset.get_id()) }}">
+          <form class="form-inline d-flex" method="post" action="{{ url_for(view_name,method='delete',identifier=asset.get_id()) }}">
             <button class="btn btn-danger ml-2" type="submit" value =""><i class="fas fa-trash-alt"></i></button>
           </form>
           </div>
@@ -22,7 +22,7 @@
         </div>
         <div class="d-flex flex-column list-group mt-3">
           {% for an_asset in assets %}
-            <a href="{{ url_for('admin.'+view_func,identifier=an_asset.get_id(),method='edit')}}" class="list-group-item list-group-item-action {{ 'active' if asset.get_id() == an_asset.get_id() }} ">{{an_asset.name or an_asset.username}}</a>
+            <a href="{{ url_for(view_name,identifier=an_asset.get_id(),method='edit')}}" class="list-group-item list-group-item-action {{ 'active' if asset.get_id() == an_asset.get_id() }} ">{{an_asset.name or an_asset.username}}</a>
           {% endfor %}
         </div>
         </div>  
