--- a/webclient/templates/submit.html
+++ b/webclient/templates/submit.html
@@ -187,4 +187,9 @@
 <script src="files/iecheck.js"></script>
 <script src="files/submit.js"></script>
 <script src="files/resumable.js"></script>
+
+<script type="text/javascript">
+servers = {{servers_dict|tojson}};
+</script>
+
 {% endblock %}
