--- a/webclient/templates/submit.html
+++ b/webclient/templates/submit.html
@@ -1,12 +1,14 @@
 {%extends "base.html" %}
 {% block content %}
 {{ flashes() }}
- <form id="form" action="/submit_task" method="post"  class="needs-validation" novalidate>
+ <form id="form" action="/submit_task" method="post"  class="needs-validation" novalidate autocomplete="off">
+	<input autocomplete="false" name="hidden" type="text" style="display:none;">
 <nav class="mb-4">
   <div class="nav nav-tabs modes" id="nav-tab" role="tablist" >
     <a class="nav-item nav-link active" id="nav-upload-tab" data-toggle="tab" href="" role="tab" aria-controls="nav-upload" aria-selected="true"><i class="fas fa-upload"></i> Upload File</a>
 {% if config.YARRA_ARCHIVE_UPLOAD %}
     <a class="nav-item nav-link " id="nav-archive-tab" data-toggle="tab" href="" role="tab" aria-controls="nav-archive" aria-selected="false"><i class="fas fa-search"></i> Search Archive</a>
+	<a class="nav-item nav-link " id="nav-batch-tab" data-toggle="tab" href="" role="tab" aria-controls="nav-batch" aria-selected="false"><i class="fas fa-search"></i> Batch Search</a>
 {% endif %}
   </div>
 </nav>
@@ -43,25 +45,52 @@
 	    <button class="btn btn-primary float-right" type="submit" id="search_btn" style="height: 37px;">Search</button>
 	  </div>
   </div>
-  <div id="search_results_box" class="card my-3 d-none p-4">
-  	<div class="" style="max-height:300px; overflow-y: auto;">
-	<table class="table" id='search_results'></table>
-	</div>
-	<div class="row mt-3">
-		<div class="col-sm-10"></div>
-		<div class="col-sm-1">
-	    <button class="btn btn-primary" type="submit" id="search_prev_btn" style="height: 37px;"><i class="fas fa-angle-left"></i> Prev</button>
+  </div>
+  {% if current_user.is_admin %}
+  <div class="tab-pane fade" id="nav-batch" role="tabpanel" aria-labelledby="nav-batch-tab">
+	<div class="row">
+		<textarea type="textarea" name="batch_box" class="form-control" id="batch_box" placeholder="Select accession numbers" style="min-height: 14em !important;" required disabled ></textarea>
+  	</div>
+	<div class="row">
+		<div>
+		<div class= "custom-file">
+			<input type="file" class="form-control custom-file-input" id="accession_file" name="file" accept=".txt" required/>
+		    <label for="files" class="custom-file-label" default="Load from file" >Load from file</label>
+		    <div class="invalid-feedback">
+			    A file is required.
+		    </div>
 		</div>
-
-		<div class="col-sm-1">
-	    <button class="btn btn-primary" type="submit" id="search_next_btn" style="height: 37px;">Next <i class="fas fa-angle-right"></i></button>
 		</div>
+		<button class="btn btn-primary float-right" type="submit" id="batch_btn" style="height: 37px; margin-left: auto;">Lookup</button>
 	</div>
   </div>
-  </div>
+{% endif %}
 {% endif %}  
 </div>
-<div class="card my-4">
+{% if config.YARRA_ARCHIVE_UPLOAD %}
+<div id="search_results_box" class="card my-3 d-none p-4">
+	<div class="" style="max-height:300px; overflow-y: auto;">
+  <table class="table" id='search_results'></table>
+  </div>
+  <div class="row mt-3">
+	  <div class="col-sm-10"></div>
+	  <div class="col-sm-1">
+	  <button class="btn btn-primary" type="submit" id="search_prev_btn" style="height: 37px;"><i class="fas fa-angle-left"></i> Prev</button>
+	  </div>
+
+	  <div class="col-sm-1">
+	  <button class="btn btn-primary" type="submit" id="search_next_btn" style="height: 37px;">Next <i class="fas fa-angle-right"></i></button>
+	  </div>
+  </div>
+  <details id="accessions_missing" class="d-none" style="color: red;">
+	<summary>Accessions not found</summary>
+	<div id="accessions_missing_list" style="max-height:10em; overflow-y:scroll;">
+
+	</div>
+  </details>
+</div>
+{%endif%}
+<div class="card my-4" id="scan_information_box">
   <div class="card-header">
     Scan Information
   </div>
